--- a/assets/dev/scss/editor/_templates-modal.scss
+++ b/assets/dev/scss/editor/_templates-modal.scss
@@ -1,510 +1,513 @@
 #builder-template-library-modal {
-	.dialog-widget-content {
-		width: 1300px;
-		background-color: $editor-background-light;
-	}
+  .dialog-widget-content {
+    width            : 1300px;
+    background-color : $editor-background-light;
+  }
 
-	.dialog-widget-header {
-		padding: 0;
-		background-color: #fff;
-		box-shadow: $panel-bottom-shadow;
-		position: relative; // Show the shadow above the scrolled list
-		z-index: 1;
-	}
+  .dialog-widget-header {
+    position         : relative;
+    z-index          : 1;
+    padding          : 0;
+    background-color : #fff;
+    box-shadow       : $panel-bottom-shadow;
+    // Show the shadow above the scrolled list
+  }
 
-	.dialog-buttons-wrapper {
-		display: none;
-	}
+  .dialog-buttons-wrapper {
+    display : none;
+  }
 
-	.dialog-message {
-		height: 830px;
-		max-height: 85vh;
-		overflow: auto;
-		padding: 15px;
-	}
+  .dialog-message {
+    overflow   : auto;
+    padding    : 15px;
+    max-height : 85vh;
+    height     : 830px;
+  }
 
-	a {
-		&,
-		&:hover {
-			color: inherit;
-		}
-	}
+  a {
+    &,
+    &:hover {
+      color : inherit;
+    }
+  }
 
-	a.builder-template-library-blank-footer-link {
-		transition: color 0.5s;
+  a.builder-template-library-blank-footer-link {
+    transition : color 0.5s;
 
-		&:hover {
-			color: $editor-accent;
-		}
-	}
+    &:hover {
+      color : $editor-accent;
+    }
+  }
 
-	.builder-button-success {
-		text-transform: uppercase;
+  .builder-button-success {
+    text-transform : uppercase;
 
-		.builder-button-title {
-			@include padding-start(8px);
-		}
-	}
+    .builder-button-title {
+      @include padding-start(8px);
+    }
+  }
 }
 
 #builder-template-library-header {
-	display: flex;
-	width: 100%;
+  display : flex;
+  width   : 100%;
 
-	> * {
-		display: table-cell;
-		vertical-align: middle;
-	}
+  > * {
+    display        : table-cell;
+    vertical-align : middle;
+  }
 }
 
 #builder-template-library-header-logo-area {
-	width: 15%;
-	text-align: $start;
-	@include padding-start(15px);
+  @include     padding-start(15px);
+  width      : 15%;
+  text-align : $start;
 
-	> * {
-		float: $start;
+  > * {
+    float : $start;
 
-		> * {
-			vertical-align: middle;
-		}
-	}
+    > * {
+      vertical-align : middle;
+    }
+  }
 }
 
 #builder-template-library-header-logo {
-	font-size: 15px;
-	text-transform: uppercase;
-	color: $editor-darkest;
-	font-weight: bold;
-	cursor: pointer;
-	padding-top: 13px;
+  padding-top    : 13px;
+  color          : $editor-darkest;
+  text-transform : uppercase;
+  font-weight    : bold;
+  font-size      : 15px;
+  cursor         : pointer;
 
-	i {
-		@include padding-end(10px);
-		color: $editor-accent;
-		font-size: 20px;
-	}
+  i {
+    &:before {
+        content: '';
+    }
+  }
 }
 
 #builder-template-library-header-menu {
-	text-align: center;
-	width: 100%;
+  width      : 100%;
+  text-align : center;
 }
 
 .builder-template-library-menu-item {
-	display: inline-block;
-	padding: 17px;
-	cursor: pointer;
+  display : inline-block;
+  padding : 17px;
+  cursor  : pointer;
 
-	&.builder-active {
-		background-image: linear-gradient(to bottom, #f3f3f3, #fff);
-		border-bottom: 3px solid $editor-accent;
-	}
+  &.builder-active {
+    border-bottom    : 3px solid $editor-accent;
+    background-image : linear-gradient(
+                         to bottom,
+                         #f3f3f3,
+                         #fff
+                       );
+  }
 }
 
 #builder-template-library-header-menu-area {
-	width: 75%;
+  width : 75%;
 
-	> * {
-		float: $end;
-	}
+  > * {
+    float : $end;
+  }
 }
 
 #builder-template-library-header-items-area {
-	width: 13%;
+  width : 13%;
 
-	> * {
-		float: $end;
-	}
+  > * {
+    float : $end;
+  }
 }
 
 #builder-template-library-header-tools {
-	> * {
-		float: $end;
-	}
+  > * {
+    float : $end;
+  }
 }
 
 .builder-template-library-header-item {
-	position: relative;
-	@include border-start(1px solid $editor-background);
-	height: 50px;
-	box-sizing: content-box;
-	cursor: pointer;
-	transition: color 0.5s;
+  @include     border-start(1px solid $editor-background);
+  position   : relative;
+  box-sizing : content-box;
+  height     : 50px;
+  cursor     : pointer;
+  transition : color 0.5s;
 
-	&:not(:hover) {
-		color: $editor-light;
-	}
+  &:not(:hover) {
+    color : $editor-light;
+  }
 
-	> * {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translateX(-50%) translateY(-50%);
-	}
+  > * {
+    position  : absolute;
+    top       : 50%;
+    left      : 50%;
+    transform : translateX(-50%) translateY(-50%);
+  }
 
-	> i {
-		font-size: 18px;
-	}
+  > i {
+    font-size : 18px;
+  }
 }
 
 #builder-template-library-header-close-modal,
 #builder-template-library-header-save {
-	width: 56px;
+  width : 56px;
 }
 
 #builder-template-library-header-preview {
-	> * {
-		float: $end;
-	}
+  > * {
+    float : $end;
+  }
 }
 
 #builder-template-library-header-preview-insert-wrapper {
-	width: 100px;
-	cursor: default;
+  width  : 100px;
+  cursor : default;
 }
 
 #builder-template-library-header-preview-insert {
-	width: 80%;
-	padding: 8px 0;
+  padding : 8px 0;
+  width   : 80%;
 }
 
 #builder-template-library-header-preview-back {
-	@include padding(16.5px, 16.5px, 15px, 0);
-	@include border-end(1px solid $editor-background);
-	cursor: pointer;
-	transition: color 0.5s;
+  @include     padding(16.5px, 16.5px, 15px, 0);
+  @include     border-end(1px solid $editor-background);
+  cursor     : pointer;
+  transition : color 0.5s;
 
-	&:not(:hover) {
-		color: $editor-light;
-	}
+  &:not(:hover) {
+    color : $editor-light;
+  }
 
-	i {
-		@include padding-end(10px);
-		font-size: 18px;
+  i {
+    @include    padding-end(10px);
+    font-size : 18px;
 
-		&:before {
-			content: getValueByDirection( '\e908', '\e907' );
-		}
-	}
+    &:before {
+      content : getValueByDirection( '\e908', '\e907' );
+    }
+  }
 }
 
 #builder-template-library-loading {
-	.builder-loading-title {
-		color: $editor-light;
-	}
+  .builder-loading-title {
+    color : $editor-light;
+  }
 
-	.builder-loader .cube {
-		background-color: $editor-lightest;
-	}
+  .builder-loader .cube {
+    background-color : $editor-lightest;
+  }
 }
 
 #builder-template-library-templates-container {
-	overflow: hidden;
+  overflow : hidden;
 
-	&[data-template-source="local"] {
-		box-shadow: 1px 1px 5px rgba(0,0,0,.1);
-		margin: 15px;
-	}
+  &[data-template-source="local"] {
+    margin     : 15px;
+    box-shadow : 1px 1px 5px rgba(0,0,0,.1);
+  }
 
-	&:not([data-template-source="remote"]),
-	&:not([data-template-source="theme"]) {
-		+ #builder-template-library-footer-banner {
-			display: none;
-		}
-	}
+  &:not([data-template-source="remote"]),
+  &:not([data-template-source="theme"]) {
+    + #builder-template-library-footer-banner {
+      display : none;
+    }
+  }
 }
 
 .builder-template-library-template-remote,
 .builder-template-library-template-theme {
+  float      : $start;
+  margin-top : 15px;
+  padding    : 0 15px;
+  width      : 25%;
 
-	float: $start;
-	width: 25%;
-	padding: 0 15px;
-	margin-top: 15px;
+  &:not(:hover) {
+    .builder-template-library-template-controls {
+      opacity : 0;
+    }
+  }
 
-	&:not(:hover) {
-		.builder-template-library-template-controls {
-			opacity: 0;
-		}
-	}
+  .builder-template-library-template-body {
+    position   : relative;
+    height     : 330px;
+    box-shadow : 0 1px 6px rgba(0,0,0,0.2);
+  }
 
-	.builder-template-library-template-body {
-		height: 330px;
-		position: relative;
-		box-shadow: 0 1px 6px rgba(0,0,0,0.2);
-	}
+  .builder-template-library-template-screenshot {
+    height : 100%;
+  }
 
-	.builder-template-library-template-screenshot {
-		height: 100%;
-		background-size: cover;
-		background-position-x: 50%;
-	}
+  .builder-template-library-template-controls {
+    position         : absolute;
+    top              : 0;
+    left             : 0;
+    width            : 100%;
+    height           : 100%;
+    background-color : rgba(0,0,0,.5);
+    transition       : opacity 0.5s;
+  }
 
-	.builder-template-library-template-controls {
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: rgba(0,0,0,.5);
-		transition: opacity 0.5s;
-	}
+  .builder-template-library-template-insert {
+    width     : 150px;
+    font-size : 11px;
+  }
 
-	.builder-template-library-template-insert {
-		font-size: 11px;
-		width: 150px;
-	}
+  .builder-template-library-template-preview {
+    position : relative;
+    height   : 180px;
+    cursor   : pointer;
 
-	.builder-template-library-template-preview {
-		position: relative;
-		height: 180px;
-		cursor: pointer;
+    i {
+      position  : absolute;
+      top       : 50%;
+      left      : 50%;
+      color     : $editor-lightest;
+      font-size : 20px;
+      transform : translateX(-50%) translateY(-50%);
+    }
+  }
 
-		i {
-			font-size: 20px;
-			color: $editor-lightest;
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translateX(-50%) translateY(-50%);
-		}
-	}
+  .builder-template-library-template-insert {
+    padding : 11px;
 
-	.builder-template-library-template-insert {
-		padding: 11px;
+    i {
+      @include padding-end(5px);
+    }
+  }
 
-		i {
-			@include padding-end(5px);
-		}
-	}
-
-	.builder-template-library-template-name {
-		margin: 13px 0 10px;
-		font-size: 12px;
-		text-align: center;
-		color: $editor-dark;
-	}
+  .builder-template-library-template-name {
+    margin     : 13px 0 10px;
+    color      : $editor-dark;
+    text-align : center;
+    font-size  : 12px;
+  }
 }
 
 .builder-template-library-template-local {
-	background-color: #fff;
-	display: table;
-	table-layout: fixed;
-	width: 100%;
-	border-bottom: 1px solid $editor-lightest;
-	height: 50px;
-	transition: background-color 0.3s linear;
+  display          : table;
+  width            : 100%;
+  height           : 50px;
+  border-bottom    : 1px solid $editor-lightest;
+  background-color : #fff;
+  table-layout     : fixed;
+  transition       : background-color 0.3s linear;
 
-	&:hover {
-		background-color: lighten($editor-background-light, 3%);
-	}
+  &:hover {
+    background-color : lighten($editor-background-light, 3%);
+  }
 
-	&:not(:hover) {
-		.builder-template-library-template-controls {
-			visibility: hidden;
-		}
-	}
+  &:not(:hover) {
+    .builder-template-library-template-controls {
+      visibility : hidden;
+    }
+  }
 
-	> * {
-		display: table-cell;
-		vertical-align: middle;
-		text-align: start;
-	}
+  > * {
+    display        : table-cell;
+    vertical-align : middle;
+    text-align     : start;
+  }
 
-	.builder-template-library-template-icon {
-		text-align: center;
-		width: 6%;
-	}
+  .builder-template-library-template-icon {
+    width      : 6%;
+    text-align : center;
+  }
 
-	.builder-template-library-template-name {
-		font-size: 13px;
-		font-weight: 500;
-		width: 35%;
-	}
+  .builder-template-library-template-name {
+    width       : 35%;
+    font-weight : 500;
+    font-size   : 13px;
+  }
 
-	.builder-template-library-template-type {
-		color: $editor-light;
-	}
+  .builder-template-library-template-type {
+    color : $editor-light;
+  }
 
-	.builder-template-library-template-controls {
-		width: 42%;
-		direction: getInverseDirection();
+  .builder-template-library-template-controls {
+    width     : 42%;
+    direction : getInverseDirection();
 
-		> * {
-			direction: $direction;
-		}
+    > * {
+      direction : $direction;
+    }
 
-		> div {
-			display: inline-block;
-			@include margin-start(15px);
-			cursor: pointer;
-			font-weight: 500;
-			transition: color 0.5s;
+    > div {
+      @include      margin-start(15px);
+      display     : inline-block;
+      font-weight : 500;
+      cursor      : pointer;
+      transition  : color 0.5s;
 
-			&:not(:hover) {
-				color: $editor-light;
-			}
-		}
-	}
+      &:not(:hover) {
+        color : $editor-light;
+      }
+    }
+  }
 
-	.builder-template-library-template-control-title {
-		@include margin-start(6px);
-	}
+  .builder-template-library-template-control-title {
+    @include margin-start(6px);
+  }
 
-	.builder-template-library-template-delete {
-		&:hover {
-			color: $editor-warning;
-		}
-	}
+  .builder-template-library-template-delete {
+    &:hover {
+      color : $editor-warning;
+    }
+  }
 
-	.builder-template-library-template-insert {
-		padding: 8px 18px;
-		margin: 0 20px;
-	}
+  .builder-template-library-template-insert {
+    margin  : 0 20px;
+    padding : 8px 18px;
+  }
 }
 
 #builder-template-library-preview {
-	height: 100%;
-	overflow: hidden;
+  overflow : hidden;
+  height   : 100%;
 
-	iframe {
-		width: 1906px;
-		height: 150%;
-		transform: scale(0.666) translateX(getValueByDirection(-25%, 25%)) translateY(-25%);
-	}
+  iframe {
+    width     : 1906px;
+    height    : 150%;
+    transform : scale(0.666) translateX(getValueByDirection(-25%, 25%)) translateY(-25%);
+  }
 }
 
 .builder-template-library-blank-title {
-	font-size: 30px;
-	margin-top: 55px;
+  margin-top : 55px;
+  font-size  : 30px;
 }
 
 .builder-template-library-blank-excerpt {
-	font-size: 18px;
-	color: $editor-light;
-	margin-top: 20px;
-	font-weight: 300;
+  margin-top  : 20px;
+  color       : $editor-light;
+  font-weight : 300;
+  font-size   : 18px;
 }
 
 #builder-template-library-save-template-form {
-	margin-top: 55px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  display         : flex;
+  align-items     : center;
+  justify-content : center;
+  margin-top      : 55px;
 
-	> * {
-		height: 60px;
-		font-size: 18px;
-	}
+  > * {
+    height    : 60px;
+    font-size : 18px;
+  }
 }
 
 #builder-template-library-save-template-name {
-	width: 460px;
-	background-color: #fff;
-	font-weight: 300;
-	color: $editor-light;
-	@include padding-start(25px);
-	border-radius: getValueByDirection(3px 0 0 3px, 0 3px 3px 0);
-	border: none;
+  @include           padding-start(25px);
+  width            : 460px;
+  border           : none;
+  border-radius    : getValueByDirection(3px 0 0 3px, 0 3px 3px 0);
+  background-color : #fff;
+  color            : $editor-light;
+  font-weight      : 300;
 
-	&:focus {
-		border: 1px solid $editor-background;
-	}
+  &:focus {
+    border : 1px solid $editor-background;
+  }
 }
 
 #builder-template-library-save-template-submit {
-	width: 150px;
-	border-radius: getValueByDirection(0 3px 3px 0, 3px 0 0 3px);
-	font-weight: 500;
+  width         : 150px;
+  border-radius : getValueByDirection(0 3px 3px 0, 3px 0 0 3px);
+  font-weight   : 500;
 
-	&:hover {
-		box-shadow: none;
-	}
+  &:hover {
+    box-shadow : none;
+  }
 }
 
 .builder-template-library-blank-footer {
-	position: absolute;
-	bottom: 90px;
-	left: 50%;
-	transform: translateX(-50%);
-	color: $editor-light;
-	font-size: 13px;
-	font-style: italic;
+  position   : absolute;
+  bottom     : 90px;
+  left       : 50%;
+  color      : $editor-light;
+  font-style : italic;
+  font-size  : 13px;
+  transform  : translateX(-50%);
 }
 
 #builder-template-library-footer-banner {
-	i {
-		color: $editor-lighter;
-		font-size: 56px;
-		margin-top: 40px;
-	}
+  i {
+    margin-top : 40px;
+    color      : $editor-lighter;
+    font-size  : 56px;
+  }
 
-	.builder-excerpt {
-		color: $editor-light;
-		font-size: 15px;
-		font-weight: 500;
-		margin: 20px 0;
-	}
+  .builder-excerpt {
+    margin      : 20px 0;
+    color       : $editor-light;
+    font-weight : 500;
+    font-size   : 15px;
+  }
 }
 
 #builder-template-library-templates-empty-icon {
-	font-size: 96px;
-	margin-top: 40px;
-	color: $editor-lightest;
+  margin-top : 40px;
+  color      : $editor-lightest;
+  font-size  : 96px;
 }
 
 #builder-template-library-error-dialog {
-	.dialog-message {
-		text-align: start;
-	}
+  .dialog-message {
+    text-align : start;
+  }
 }
 
 #builder-template-library-error-info {
-	margin-top: 10px;
+  margin-top : 10px;
 }
 
-//Search Icon
+// Search Icon
+
 #builder-template-library-header-search-input {
-	position: relative;
-	border: 1px solid #EBEBEB;
-	height: 30px;
-	margin-top: 10px;
-	border-radius: 2px;
+  position      : relative;
+  margin-top    : 10px;
+  height        : 30px;
+  border        : 1px solid #EBEBEB;
+  border-radius : 2px;
 
-	input {
-		font-size: 11px;
-		line-height: 28px;
-		border-radius: 0;
-		padding: 0 27px 0 10px;
-		color: #a0a5aa;
-		border: none;
-		transition: all 1s;
-	}
+  input {
+    padding       : 0 27px 0 10px;
+    border        : none;
+    border-radius : 0;
+    color         : #a0a5aa;
+    font-size     : 11px;
+    line-height   : 28px;
+    transition    : all 1s;
+  }
 
-	#builder-template-library-header-search-input-clear,
-	.fa.fa-search {
-		position: absolute;
-		right: 10px;
-		top: 50%;
-		color: #a0a5aa;
-		transform: translateY(-50%);
-		transition: right 1s;
-	}
+  #builder-template-library-header-search-input-clear,
+  .fa.fa-search {
+    position   : absolute;
+    top        : 50%;
+    right      : 10px;
+    color      : #a0a5aa;
+    transition : right 1s;
+    transform  : translateY(-50%);
+  }
 
-	#builder-template-library-header-search-input-clear {
-		right: -30px;
-		z-index: 1;
-		height: 30px;
-		width: 30px;
-		line-height: 30px;
-		cursor: pointer;
-		opacity: 0;
-	}
+  #builder-template-library-header-search-input-clear {
+    right       : -30px;
+    z-index     : 1;
+    width       : 30px;
+    height      : 30px;
+    line-height : 30px;
+    opacity     : 0;
+    cursor      : pointer;
+  }
 
-	&.active {
-		#builder-template-library-header-search-input-clear {
-			opacity: 1;
-		}
-	}
+  &.active {
+    #builder-template-library-header-search-input-clear {
+      opacity : 1;
+    }
+  }
 }
