--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -69,6 +69,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
     width: 100%;
     height: 100%; }
   .qazana .qazana-invisible {
@@ -130,6 +131,7 @@
   display: none; }
 
 .qazana-widget-container {
+  overflow: hidden;
   width: 100%; }
 
 .qazana-section {
