--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -81,7 +81,7 @@
     max-width : none;
     transform : translateY(-50%) translateX(-50%);
   }
-  
+
   .qazana-html5-video {
     object-fit : cover;
     // For HTML5 portrait video
@@ -92,6 +92,7 @@
     position : absolute;
     top      : 0;
     left     : 0;
+    z-index: 1;
     width    : 100%;
     height   : 100%;
   }
@@ -227,5 +228,6 @@
 }
 
 .qazana-widget-container {
-  width : 100%;
+  overflow : hidden;
+  width    : 100%;
 }
