improved common controls, hover effects on all modules, upgrade routine,  indexes rebuilt

--- a/assets/dev/scss/frontend/_grid.scss
+++ b/assets/dev/scss/frontend/_grid.scss
@@ -20,7 +20,6 @@
 	// Container
 	.qazana-container {
 		position: relative;
-		z-index: 1;
 		display: flex;
 		margin-right: auto;
 		margin-left: auto;
@@ -119,9 +118,9 @@
 
 // Columns
 .qazana-column {
+	position: relative;
 	display: flex;
 	min-height: 1px;
-
 }
 @mixin qazana-grid-classes {
 	 @each $sizeKey, $size in $column-sizes{
