--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -51,7 +51,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: -1;
     overflow: hidden;
     width: 100%;
     height: 100%; }
@@ -59,6 +59,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 0;
     max-width: none;
     -webkit-transform: translateY(-50%) translateX(-50%);
             transform: translateY(-50%) translateX(-50%); }
@@ -69,7 +70,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: 0;
     width: 100%;
     height: 100%; }
   .qazana .qazana-invisible {
@@ -142,7 +143,6 @@
         height: 100%; } }
   .qazana-section .qazana-container {
     position: relative;
-    z-index: 1;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -218,6 +218,7 @@
   margin-bottom: 20px; }
 
 .qazana-column {
+  position: relative;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
